@@ -7,7 +7,7 @@
 - Agent returns correct free memory value on Windows
 - Parameter System.Memory.Physical.Cached supported on Windows
 - Fixed issues:
-   NX-622 ( Alerts will not be generated in certain conditions: events, that persist after maintenence and node down after unreachable)
+	NX-622 ( Alerts will not be generated in certain conditions: events, that persist after maintenence and node down after unreachable)
 	NX-922 (Service check template objects disappears after server restart)
 	NX-1097 (Configuration option to ignore alarm's helpdesk state when doing resolve or terminate)
 	NX-1157 (configure --with-dist fails if OpenSSL is not installed)
@@ -16,6 +16,7 @@
 	NX-1419 (AgentTunnels.ProcessUnbound scheduled task should be hidden)
 	NX-1420 (Do not use unmanaged devices with SNMP for MAC resolving)
 	NX-1421 (Configuration poll for node without SNMP and agent always read ARP cache from all SNMP devices in subnet)
+	NX-1431 ("Don't Fragment" option for ping sub-agent)
 
 
 *
